# Ironcliw-ai

./: .env.example  .env.linux.example  .env.llm  .env.platform.example  .env.windows  .env.windows.example  .flake8  .gitignore  .gitleaks.toml  .jarvis_health  .pre-commit-config.yaml  ADAPTIVE_CLICKER_CAPABILITIES.md  ADVANCED_DISPLAY_REFERENCE_HANDLER.md  ADVANCED_TRAINING_SYSTEM_SUMMARY.md  AIRPLAY_DISCOVERY_IMPLEMENTATION.md  AI_AGENT_MASTER_BLUEPRINT.md  APPLE_WATCH_REQUIREMENT_EXPLAINED.md  BROWSER_CONNECTION_FIX.md  CAPTURERESULT_FIX.md  CI_FAILURE_REPORT.md  CLAUDE_AI_WORKFLOWS.md  CLEANUP_BUG_FIX.md  CLEANUP_INTEGRATION_COMPLETE.md  CLEANUP_PROXIMITY_SYSTEM.md  CLOUD_SQL_FIX_COMPLETE.md  CLOUD_SQL_PROXY_SETUP.md  COMPLETE_ARCHITECTURAL_FIXES_IMPLEMENTATION.md  COMPLETE_FIX_SUMMARY.md  COMPLETE_PROXIMITY_DISPLAY_SYSTEM.md  COMPLETION_SUMMARY.md  COMPONENT_WARMUP_ENHANCEMENT.md  COMPREHENSIVE_DEEP_DIVE_ECAPA_VIBA_PAVA.md  COMPREHENSIVE_FIXES_v10.7.md  COMPUTER_USE_CROSS_REPO_INTEGRATION.md  COMPUTER_USE_OPTIMIZATION_TEST_RESULTS.md  CONNECTION_MANAGEMENT_UPGRADE.md  CONTEXT_INTELLIGENCE_INTEGRATION.md  COORDINATE_DOUBLING_INVESTIGATION.md  COORDINATE_FIX_SUMMARY.md  CORRECTED_UNDERSTANDING.md  (+349 more)
.claude/: settings.json
.github/: GITHUB_ACTIONS_GUIDE.md
backend/: .env.example  ADAPTIVE_VOICE_RECOGNITION.md  ADVANCED_PIPELINE_CONFIRMATION.md  ASYNC_INTEGRATION_COMPLETE.md  ASYNC_PIPELINE_INTEGRATION.md  ASYNC_PIPELINE_INTEGRATION_GUIDE.md  ASYNC_VOICE_INTEGRATION.md  BEAST_MODE_DEPLOYMENT_GUIDE.md  CLAUDE_VISION_DIRECT_SOLUTION.md  CONTEXTUAL_INTEGRATION_COMPLETE.md  CONTEXTUAL_QUERY_INTEGRATION.md  CONTEXT_AWARENESS_ENHANCEMENT.md  CONTEXT_AWARENESS_STATUS.md  CONTEXT_AWARE_UNLOCK_IMPLEMENTATION.md  CONTEXT_INTELLIGENCE_FLOW.md  CONTEXT_INTELLIGENCE_IMPLEMENTATION.md  CONTEXT_INTELLIGENCE_INTEGRATION_GUIDE.md  CONTEXT_INTELLIGENCE_SUMMARY.md  COREML_VOICE_INTEGRATION.md  CPU_OPTIMIZATION_REPORT.md  DESKTOP_SPACE_QUERY_FIX_COMPLETE.md  ENHANCED_DETECTION_SYSTEM.md  ENHANCED_RESOLVER_INTEGRATION_COMPLETE.md  EVENT_INTEGRATION_GUIDE.md  HOT_RELOAD_IMPLEMENTATION.md  HUMAN_LIKE_CONTROL_CENTER_DETECTION.md  INTERPRETER_ARCHITECTURE_ANALYSIS.md  JARVIS_APP_CONTROL_FIX.md  JARVIS_INTERPRETERS_OVERVIEW.md  JARVIS_MONITORING_BEHAVIOR.md  JARVIS_WEATHER_FIX_SUMMARY.md  LIFECYCLE_INTEGRATION.md  LOCK_COMMAND_FIXED.md  MAIN_PY_OPTIMIZATION_GUIDE.md  MONITORING_COMMAND_FIXED.md  MULTISPACE_FIX_SUMMARY.md  MULTI_MONITOR_INTEGRATION_STATUS.md  MULTI_SPACE_ERROR_FIXES.md  MULTI_SPACE_PURPLE_INDICATOR_INTEGRATION.md  MULTI_SPACE_QUERIES_COMPLETE.md  (+172 more)
backend/native_extensions/rust_processor/: Cargo.toml  README.md  pyproject.toml
backend/rust_extensions/: Cargo.toml  README.md  WINDOWS_PORT_STATUS.md  build.py  pyproject.toml
backend/rust_extensions/src/: lib.rs
backend/rust_performance/: Cargo.toml  pyproject.toml
backend/rust_performance/rust_performance/: pyproject.toml
backend/rust_performance/rust_performance/src/: lib.rs
backend/rust_performance/src/: lib.rs  resource_monitor.rs
backend/rust_performance/src/memory/: mod.rs
backend/rust_performance/src/vision/: fast_processor.rs
backend/vision/intelligence/: ACTIVITY_RECOGNITION_GUIDE.md  Cargo.toml  GOAL_INFERENCE_GUIDE.md  INTEGRATED_INTELLIGENCE_README.md  INTERVENTION_DECISION_GUIDE.md  QUADTREE_SPATIAL_GUIDE.md  README.md  TEMPORAL_CONTEXT_GUIDE.md  VSMS_INTEGRATION_GUIDE.md  VisionIntelligence  WORKFLOW_INTEGRATION_SUMMARY.md  WORKFLOW_PATTERN_GUIDE.md  __init__.py  build.sh  element_detector.py  feedback_aware_vision.py  integration_orchestrator.py  intervention_decision_engine.py  predictive_precomputation_engine.py  pyproject.toml  semantic_cache_lsh.py  test_intervention_decision.py  test_solution_memory_bank.py  vision_intelligence_bridge.py  workflow_pattern_engine.py
backend/vision/intelligence/src/: python_bridge.rs
backend/vision/jarvis-rust-core/: Cargo.toml  INTEGRATION.md  build.sh  jarvis_rust_core.py  pyproject.toml
backend/vision/jarvis-rust-core/src/: lib.rs
backend/vision/jarvis-rust-core/src/bridge/: notification_monitor.rs
backend/vision/jarvis-rust-core/src/runtime/: cpu_affinity.rs
backend/vision/jarvis-rust-core/src/vision/: bloom_filter_network.rs  capture.rs  integration_pipeline.rs  spatial_quadtree.rs
config/: neural_mesh.yaml  voice_sidecar.example.yaml
data/: discovered_topics.json
diagrams/: QUICK_REFERENCE.md  README.md
docker/: .env.example  Dockerfile.backend  Dockerfile.backend-slim  Dockerfile.cloud  Dockerfile.frontend  Dockerfile.gcp-inference  Dockerfile.training  docker-compose.yml  entrypoint.sh  gcp_inference_stub.py  nginx-cloud-proxy.conf  nginx.conf  training_db_schema.sql  training_entrypoint.py
docs/: ADVANCED_HYBRID_SYNC_V2.md  ADVANCED_PROCESS_DETECTION.md  CHANGELOG_UNIFIED_PROGRESS.md  FEEDBACK_LEARNING_AND_COMMAND_SAFETY.md  FINAL_INTEGRATION_STATUS.md  FOLLOWUP_SYSTEM_GUIDE.md  HYBRID_CLOUD_STARTUP.md  HYBRID_DATABASE_SYNC.md  HYBRID_DATABASE_SYNC_IMPLEMENTATION.md  INTEGRATION_COMPLETE_SUMMARY.md  INTEGRATION_GUIDE_FEEDBACK_AND_SAFETY.md  MANUAL_TESTING_GUIDE.md  MULTI_SPACE_CONTEXT_SYSTEM.md  PHASE2_IMPLEMENTATION_COMPLETE.md  PHYSICS_AWARE_VOICE_AUTHENTICATION_v2.5.md  PRD_IMPLEMENTATION_CHECKLIST.md  PRD_TIS_IMPLEMENTATION_STATUS.md  RELEASE_NOTES_v2.0.md  STARTUP_ARCHITECTURE_V2.md  TERMINAL_FOLLOWUP_FEATURE.md  THREAD_CLEANUP_ARCHITECTURE.md  TORCHAUDIO_COMPATIBILITY_FIX.md  TRINITY_VOICE_CONFIGURATION.md  TRINITY_VOICE_SYSTEM_COMPLETE.md  UNIFIED_CONTEXT_BRIDGE_COMPLETE.md  UNIFIED_MONOLITH_VERIFICATION.md  UNIFIED_STARTUP_PROGRESS.md  V107_IMPROVEMENTS_SUMMARY.md  VOICE_AUTHENTICATION_ENHANCEMENT_v2.1.md  VOICE_BIOMETRICS_SYSTEM.md  VOICE_EMBEDDING_RECONSTRUCTION_FIX.md  VOICE_PIPELINE_NOTES.md  VOICE_UNLOCK_FLOW_DIAGRAM.md  Voice-Biometric-Authentication-Debugging-Guide.md  cross-repo-contract.md  trinity-cross-repo-contract.md  v13.11.0_RELEASE_NOTES.md
examples/: sai_integration_example.py
frontend/: package-lock.json  package.json  test-windows.cmd
jarvis-electron/: main.js  package-lock.json  package.json  preload.js
(+1982 files in other folders)
