[package]
name = "jarvis_rust_extensions"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarvis_rust_extensions"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
sysinfo = "0.30"
once_cell = "1.19"
parking_lot = "0.12"
bincode = "1.3"
flate2 = "1.0"
lz4 = "1.24"
half = "2.3"
ndarray = "0.15"
numpy = "0.20"
rayon = "1.8"
mimalloc = { version = "0.1", default-features = false, optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Foundation"
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[features]
default = ["mimalloc"]