[package]
name = "jarvis_performance"
version = "0.1.0"
edition = "2021"

[lib]
name = "jarvis_performance"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
numpy = "0.20"
ndarray = { version = "0.15", features = ["rayon"] }
rayon = "1.7"
parking_lot = "0.12"
dashmap = "5.5"
bytes = "1.5"
image = { version = "0.25", features = ["jpeg", "png"] }
crossbeam-channel = "0.5"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
mimalloc = { version = "0.1", default-features = false }
memmap2 = "0.9"
sysinfo = "0.30"

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false
strip = true

[features]
default = []
