[package]
name = "rust_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_processor"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.20"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
