[package]
name = "jarvis-vision-intelligence"
version = "0.1.0"
edition = "2021"
authors = ["JARVIS Vision Team"]

[lib]
name = "vision_intelligence"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

# Computer vision and ML
image = "0.24"
imageproc = "0.23"
ndarray = { version = "0.15", features = ["serde"] }
candle-core = { version = "0.3", features = ["metal", "accelerate"] }
candle-nn = "0.3"
candle-transformers = "0.3"

# Performance and optimization
rayon = "1.8"
crossbeam = "0.8"
ahash = "0.8"
dashmap = "5.5"
smallvec = "1.11"

# Memory management
mimalloc = { version = "0.1", default-features = false }
typed-arena = "2.0"
bumpalo = "3.14"

# SIMD and hardware acceleration
wide = "0.7"
simdeez = "1.0"
metal = "0.27"
objc = "0.2"

# Pattern matching and analysis
regex = "1.10"
aho-corasick = "1.1"
fuzzy-matcher = "0.3"

# Workflow pattern dependencies
parking_lot = "0.12"
flate2 = "1.0"

# Time and metrics
chrono = { version = "0.4", features = ["serde"] }
metrics = "0.21"
tracing = "0.1"
tracing-subscriber = "0.3"

# Persistence
rocksdb = "0.21"
rmp-serde = "1.1"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"
cocoa = "0.25"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[profile.release-with-debug]
inherits = "release"
debug = true

# Benchmarks disabled - run manually if needed
# [[bench]]
# name = "vision_benchmarks"
# harness = false